# biker

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml
.github/workflows/: server.build.yml
biker-core/: Cargo.toml
biker-server/: Cargo.toml  build.rs
biker-server/migrations/: 20240527144550_setup.sql
biker-server/src/: config.rs  lib.rs  logger.rs  main.rs
biker-server/src/http/: error.rs  mod.rs
biker-server/src/http/endpoints/: bikes.rs  mod.rs  rides.rs  users.rs
protos/api/v1/: bike.proto  payment.proto  ride.proto  user.proto
protos/types/: payment_method.proto  point.proto
