[package]
name = "biker-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# External
anyhow = "1.0.75"
axum = "0.6.20"
chrono = { version = "*", features = ["serde"] }
clap = { version = "4.4.6", features = ["env", "derive"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
fern = { version = "0.6.1", features = ["colored"] }
futures = "0.3"
hyper = { version = "0.14.27", features = ["full"] }
log = "0.4"
prost = "0.12.1"
prost-types = "0.12.1"
rdkafka = "0.34.0"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.85"
sqlx = { version = "0.7.2", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
    "json",
] }
thiserror = "1.0.35"
tokio = { version = "1.33.0", features = ["full"] }
tonic = "0.10.2"
tower = { version = "0.4.13", features = ["timeout"] }
tower-http = { version = "0.4.4", features = ["trace"] }
uuid = { version = "1.4.1", features = ["serde", "v7"] }

# Internal
biker-core = { path = "../biker-core" }

[build-dependencies]
tonic-build = { version = "0.10.2", features = ["prost"] }
